# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] fix/change
# ====================================================================


# 2016-12-15
# --------------------------------------------------------------------
# ~ updates the backgrounds2.txt file with PMT K40 activities
# + I have a new joined rootfile with Pushpa's calibs and resols
#   called join22-1544-master.root
# ~ ah, and was forgetting to scale by the dru factor - internal K40
#   looks correct again - now back to work on the pmt scalings...
# ~ shoot, i had mbqkg/kg and that should be mbqkg*kg!!!
# + start working on pmt scaling
# ~ i think the internal scaling should be events/detected
#   which becomes bq * runtime * (1./generated)
# ~ tweaked v21 to plot just data for comparison to v22
# ~ tweaked v22 to use new calibs and resols
# + added join22.py to use new calibs and resols
# ~ tweak join2.py to use a specified mcfile in buildMC2()
# ~ tweaked buildMC2() to select either resol() or resol2()
# + added resol2() and Pushpa's resols
# ~ changed root branches in calib22() to use energyD for hi-E


# 2016-12-14
# --------------------------------------------------------------------
# + added calib22() and getData22() for the new calibrations
# + a couple tweaks so you can just plot data! 


# 2016-12-13
# --------------------------------------------------------------------
# ~ switching to 22-pushpa-calib.py to get calib and reso functions in
# ~ cut a v2.1 release now that internal background activity scaling
#   is working as expected
# ~ looks like scaling is working for internal K40 at least
# + added scaleBkgs() to funcs2.py to scale into real mBq/kg units
# + added key data[key]['runtime'] to dataDRU2()
# ~ use backgrounds2.txt for v21
# ~ don't use bkgs scaling in readROOT2() for v21
# ~ oops, run 1544 has 2 hour subruns - changed in dataDRU2()