@@ -87,9 +87,9 @@ def _myself_(argv):
     
     #runNum = 1324
     runNum = 1544
-    #mcfile = 'backgrounds2.txt'
+    mcfile = 'backgrounds2.txt'
     #mcfile = 'backgrounds-just-data.txt'
-    mcfile = 'backgrounds-no-sigs.txt'
+    #mcfile = 'backgrounds-no-sigs.txt'
     
     
     if reuse:
